<resources>
    <string name="app_name">Exquisite Corpse</string>
    <string name="subtitle">Collaborative Drawing Game</string>
    <string name="new_game">NEW GAME</string>

    <string name="one_player">One Player</string>
    <string name="two_players">Two Players</string>
    <string name="three_players">Three Players</string>
    <string name="four_players">Four Players</string>
    <string name="num_players_title">Select the number of players</string>
    <string-array name="num_players_options">
        <item>@string/one_player</item>
        <item>@string/two_players</item>
        <item>@string/three_players</item>
        <item>@string/four_players</item>
    </string-array>
    <string name="continue_button">Continue</string>
    <string name="cancel_button">Cancel</string>
    <string name="ready_button">Ready!</string>
    <string name="enter_names">Enter Names</string>
    <string name="enter_name">Enter Name</string>
    <string name="skip_button">Skip</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="passing_prompt">Pass the device to </string>
    <string name="head"> the head</string>
    <string name="upper_torso"> the upper torso</string>
    <string name="lower_torso"> the lower torso</string>
    <string name="torso"> the torso</string>
    <string name="feet"> the feet</string>
    <string name="to_draw"> to draw the</string>
    <string name="draw_the">Draw the</string>
    <string name="by">By</string>

    <string name="delete_warning">Do you want to discard the current game? </string>
    <string name="discard">Discard</string>

    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search player names</string>
    <string name="action_pause">Pause game</string>
    <string name="action_stop">Stop game</string>
    <string name="send_to">Send to</string>

    <string name="time_limit">Time Limit</string>
    <string name="time_limit_key">timer</string>
    <string name="ten_sec">10</string>
    <string name="thirty_sec">30</string>
    <string name="one_min">60</string>
    <string name="two_min">120</string>
    <string name="none">0</string>
    <string-array name="time_limit_options">
        <item>@string/ten_sec</item>
        <item>@string/thirty_sec</item>
        <item>@string/one_min</item>
        <item>@string/two_min</item>
        <item>@string/none</item>
    </string-array>
    <string name="ten_sec_label">:10</string>
    <string name="thirty_sec_label">:30</string>
    <string name="one_min_label">1:00</string>
    <string name="two_min_label">2:00</string>
    <string name="none_label">None</string>
    <string-array name="time_limit_options_labels">
        <item>@string/ten_sec_label</item>
        <item>@string/thirty_sec_label</item>
        <item>@string/one_min_label</item>
        <item>@string/two_min_label</item>
        <item>@string/none_label</item>
    </string-array>

    <string name="gallery">Gallery</string>
    <string name="about">About</string>
    <string name="results">Results</string>
    <string name="settings">Settings</string>

    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="pink">Pink</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="teal">Teal</string>
    <string name="blue">Blue</string>
    <string name="light_blue">Light Blue</string>
    <string name="purple">Purple</string>
    <string name="lavender">Lavender</string>
    <string name="brown">Black</string>
    <string name="gray">Gray</string>
    <string name="white">White</string>
    <string name="undo">Undo</string>
    <string name="done">Done</string>

    <string name="fab">Start new game</string>

    <string name="empty_gallery">You haven\'t created any drawings yet.</string>
    <string name="times_up">Time\'s up!</string>
    <string name="empty_search">Sorry, no items match your search.</string>
</resources>
